Cache scraped files

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "csv-stringify": "0.0.8",
     "node.extend": "^1.1.5",
     "nodeunit": "^0.9.1",
-    "scraperjs": "^1.0.1"
+    "scraperjs": "^1.0.1",
+    "slug": "^0.9.1",
+    "slugify": "^0.1.1"
   }
 }
