--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
   "author": "Kevin Schaul",
   "license": "MIT",
   "dependencies": {
-    "node.extend": "^1.1.5",
-    "nodeunit": "^0.9.1",
-    "scraperjs": "^1.0.1",
-    "slug": "^0.9.1",
-    "slugify": "^0.1.1"
+    "scrape-cache": "file:../scrape-cache",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "nodeunit": "^0.9.1",
     "csv-stringify": "0.0.8",
     "moment": "^2.10.6"
   }
